Kubenetes-aber-sicher/netpolicy/deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: webapp-dep
spec:
  selector:
    matchLabels:
      app: webapp
  template:
    metadata:
      labels:
        app: webapp
    spec:
      containers:
      - image: ghcr.io/fpommerening/container-training.webapp:1.0.0
        name: app
