Kubenetes-aber-sicher/netpolicy/pod.yaml
apiVersion: v1
kind: Pod
metadata:  
  name: source-pod
  labels:
    source: blue
spec:
  containers:
  - image: ghcr.io/fpommerening/container-training.utils:latest
    name: app
    command: ["sh", "-c", "sleep 3600"]
