Kubenetes-aber-sicher/netpolicy/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: target-svc
spec:
  type: ClusterIP
  selector:
    app: webapp
  ports:
  - name: http
    port: 80
    targetPort: 80
    protocol: TCP
